--- a/.github/workflows/functional_tests.yaml
+++ b/.github/workflows/functional_tests.yaml
@@ -36,10 +36,13 @@ jobs:
           TEST_LIST: ${{ steps.testGen.outputs.tests }}
         run: |
           echo $TEST_LIST | jq
-
   build_test_app:
     name: Build Test Client
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false # Don't cancel other jobs
+      matrix:
+        version: ["5.15.2","6.2.1"]
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -50,51 +53,40 @@ jobs:
           auth_header="$(git config --local --get http.https://github.com/.extraheader)"
           git submodule sync --recursive
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
-
       - name: Cache build
         id: cache-build
         uses: actions/cache@v2
         with:
           path: build/
-          key: ${{ github.sha }}
+          key: ${{ github.sha }}-${{matrix.version}}
 
       - name: Install Linux packages
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
-          mkdir -p build/archive
-
-          # Add external PPA, latest version of QT is 5.12.x for Ubuntu 20.04
-          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
-          sudo apt-get -o "Dir::Cache::archives=$(pwd)/build/archive" install -y \
-               git qt515base qt515tools qt515svg qt515networkauth-no-lgpl qt515charts-no-lgpl \
-               libgl-dev libpolkit-gobject-1-dev qt515quickcontrols2 qt515imageformats \
-               qt515graphicaleffects qt515websockets qt515declarative -y
-          sudo chown -R $USER:$USER build/archive
-
+          sudo apt update
+          sudo apt install git libgl-dev libegl-dev libpolkit-gobject-1-dev clang-10 liboath-dev python3 -y
+          python3 -m pip install aqtinstall
+          aqt install-qt --outputdir /opt linux desktop ${{matrix.version}} gcc_64 -m all
       - name: Compile test client
         shell: bash
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
-          export PATH=/opt/qt515/bin:$PATH
-
+          export PATH=/opt/${{matrix.version}}/gcc_64/bin:$PATH
           pip3 install -r requirements.txt
-
           git submodule update --remote --depth 1 i18n
           python3 scripts/importLanguages.py
           python3 scripts/generate_glean.py
-
           # Delete unit tests, so we can get to testing faster
           sed -i '/tests\/unit/d' mozillavpn.pro
           qmake CONFIG+=DUMMY QMAKE_CXX=clang++ QMAKE_LINK=clang++ CONFIG+=debug CONFIG+=inspector QT+=svg
           make -j$(nproc)
+          mkdir build/
           cp ./src/mozillavpn build/
-
       - name: Check build
         run: |
           ls -ial build/
-
   functionaltests:
-    name: Functional tests
+    name: Test ${{matrix.test.name}} on Qt-${{matrix.version }}
     needs: 
       - build_test_app
       - test_list
@@ -104,6 +96,7 @@ jobs:
       fail-fast: false # Don't cancel other jobs if a test fails
       matrix:
         test: ${{ fromJson(needs.test_list.outputs.matrix) }}
+        version: ["5.15.2","6.2.1"]
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
@@ -113,11 +106,14 @@ jobs:
         uses: actions/cache@v2
         with:
           path: build/
-          key: ${{ github.sha }}
+          key: ${{ github.sha }}-${{matrix.version}}
 
       - name: Install dependecies
         run: |
-          sudo dpkg -i build/archive/*.deb
+          sudo apt update
+          sudo apt install git libgl-dev libegl-dev libpolkit-gobject-1-dev clang-10 liboath-dev python3 -y
+          python3 -m pip install aqtinstall
+          aqt install-qt --outputdir /opt linux desktop ${{matrix.version}} gcc_64 -m all
           sudo apt install --no-upgrade firefox xvfb -y
           pip3 install -r requirements.txt
           npm install
