--- a/.github/workflows/functional_tests.yaml
+++ b/.github/workflows/functional_tests.yaml
@@ -75,6 +75,12 @@ jobs:
           aqt install-qt --outputdir /opt linux desktop ${{matrix.version}} gcc_64 -m all
           sudo apt install --no-upgrade firefox xvfb -y
           npm install
+          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
+          sudo apt update
+          sudo apt-get install -y \
+              qt515base qt515tools qt515svg qt515networkauth-no-lgpl qt515charts-no-lgpl \
+              qt515quickcontrols2 qt515imageformats \
+              qt515graphicaleffects qt515websockets qt515declarative -y
 
       - name: Compile test client
         shell: bash
