--- a/.github/workflows/functional_tests.yaml
+++ b/.github/workflows/functional_tests.yaml
@@ -63,7 +63,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.ccache
-          key: ${{ runner.os }}-ccache-${{matrix.version}}-${{ github.ref_name }}
+          key: ${{ runner.os }}-ccache-${{matrix.version}}-${{ github.ref }}
           restore-keys: |
             ${{ runner.os }}-ccache-${{matrix.version}}-main
 
@@ -75,17 +75,18 @@ jobs:
           aqt install-qt --outputdir /opt linux desktop ${{matrix.version}} gcc_64 -m all
           sudo apt install --no-upgrade firefox xvfb -y
           npm install
-          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
-          sudo apt update
-          sudo apt-get install -y \
-              qt515base qt515tools qt515svg qt515networkauth-no-lgpl qt515charts-no-lgpl \
-              qt515quickcontrols2 qt515imageformats \
-              qt515graphicaleffects qt515websockets qt515declarative -y
+#          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
+#          sudo apt update
+#          sudo apt-get install -y \
+#              qt515base qt515tools qt515svg qt515networkauth-no-lgpl qt515charts-no-lgpl \
+#              qt515quickcontrols2 qt515imageformats \
+#              qt515graphicaleffects qt515websockets qt515declarative -y
 
       - name: Compile test client
         shell: bash
         run: |
           export PATH=/opt/${{matrix.version}}/gcc_64/bin:$PATH
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/${{matrix.version}}/gcc_64/lib
           pip3 install -r requirements.txt
           git submodule update --remote --depth 1 i18n
           python3 scripts/importLanguages.py
@@ -114,6 +115,7 @@ jobs:
           command: |
             export PATH=$GECKOWEBDRIVER:$(npm bin):$PATH
             export HEADLESS=yes
+            export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/${{matrix.version}}/gcc_64/lib
             mkdir -p $ARTIFACT_DIR
             xvfb-run -a npm run functionalTest -- ${{matrix.test.path}}
           on_retry_command: npm run cleanup-flaky-script-output
