--- a/.github/workflows/functional_tests.yaml
+++ b/.github/workflows/functional_tests.yaml
@@ -73,6 +73,7 @@ jobs:
           sudo apt install git libgl-dev libegl-dev libpolkit-gobject-1-dev clang-10 liboath-dev python3 ccache -y
           python3 -m pip install aqtinstall
           aqt install-qt --outputdir /opt linux desktop ${{matrix.version}} gcc_64 -m all
+          sudo cp -r /opt/${{matrix.version}}/gcc_64/lib /lib
           sudo apt install --no-upgrade firefox xvfb -y
           npm install
 #          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
