--- a/.github/workflows/functional_tests.yaml
+++ b/.github/workflows/functional_tests.yaml
@@ -69,29 +69,20 @@ jobs:
 
       - name: Install Linux packages
         run: |
+          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
           sudo apt update
           sudo apt install git libgl-dev libegl-dev libpolkit-gobject-1-dev clang-10 liboath-dev python3 ccache -y
-          sudo apt install -y autotools-dev libdbus-1-3 libdbus-1-dev libxcb1 libxcb1-dev libx11-xcb1 libx11-xcb-dev \
-                              libxcb-keysyms1 libxcb-keysyms1-dev libxcb-image0-dev libxcb-shm0-dev libxcb-icccm4 libxcb-icccm4-dev \
-                              libxcb-sync-dev libxcb-xfixes0-dev libxcb-render-util0-dev libxcb-shape0-dev libxcb-randr0-dev libxrender-dev \
-                              libssl-dev libudev-dev libxkbcommon-dev libfontconfig1-dev libgl1-mesa-dev [!armel !armhf] | libgl-dev [!armel !armhf] \
-                              libgles2-mesa-dev libglu-dev  \
-                              libmtdev-dev unixodbc-dev freetds-dev libmysqlclient-dev libxkbfile-dev libsqlite3-dev libharfbuzz-dev \
-                              libxkbcommon-x11-dev libasound2-dev libgstreamer-plugins-base1.0-dev libgstreamer1.0-dev libpulse-dev \
-                              libproxy-dev libxss-dev libsnappy-dev libsrtp2-dev libflac++-dev libopus-dev libspeex-dev libjsoncpp-dev \
-                              libvpx-dev re2c libevent-dev libopenal-dev libpq-dev libxcb-xinerama0-dev libvulkan-dev libxcb-util-dev libxcb-xinput-dev libxcb-glx0-dev
-
+          # Not Quite sure why i need to install this, otherwise the binary does not seem to load
+          # maybe an LD_ERROR ? 
+          sudo apt-get install -y \
+              qt515base qt515tools qt515svg qt515networkauth-no-lgpl qt515charts-no-lgpl \
+              qt515quickcontrols2 qt515imageformats \
+              qt515graphicaleffects qt515websockets qt515declarative -y
           python3 -m pip install aqtinstall
           aqt install-qt --outputdir /opt linux desktop ${{matrix.version}} gcc_64 -m all
           sudo cp -r /opt/${{matrix.version}}/gcc_64/lib /lib
           sudo apt install --no-upgrade firefox xvfb -y
           npm install
-#          sudo add-apt-repository ppa:beineri/opt-qt-5.15.2-focal -y
-#          sudo apt update
-#          sudo apt-get install -y \
-#              qt515base qt515tools qt515svg qt515networkauth-no-lgpl qt515charts-no-lgpl \
-#              qt515quickcontrols2 qt515imageformats \
-#              qt515graphicaleffects qt515websockets qt515declarative -y
 
       - name: Compile test client
         shell: bash
@@ -126,7 +117,6 @@ jobs:
           command: |
             export PATH=$GECKOWEBDRIVER:$(npm bin):$PATH
             export HEADLESS=yes
-            export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/${{matrix.version}}/gcc_64/lib
             mkdir -p $ARTIFACT_DIR
             xvfb-run -a npm run functionalTest -- ${{matrix.test.path}}
           on_retry_command: npm run cleanup-flaky-script-output
