--- a/macos/app/Info.plist
+++ b/macos/app/Info.plist
@@ -29,6 +29,17 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array><string>mozilla-vpn</string></array>
+
+			<key>CFBundleURLName</key>
+			<string>$(PROJECT_BUNDLE_IDENTIFIER)</string>
+		</dict>
+	</array>
+
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 
